--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@types/node": "11.13.6",
     "@types/react": "16.8.14",
     "@types/react-dom": "16.8.4",
+    "@types/react-router": "^4.4.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router": "^5.0.0",
     "react-scripts": "2.1.8",
     "typescript": "3.4.4"
   },
