--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
     "@types/node": "11.13.6",
     "@types/react": "16.8.14",
     "@types/react-dom": "16.8.4",
+    "@types/react-redux": "^7.0.8",
     "@types/react-router": "^4.4.5",
+    "@types/redux-actions": "^2.6.0",
+    "immutable": "^4.0.0-rc.12",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.0.2",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "redux": "^4.0.1",
+    "redux-actions": "^2.6.5",
     "typescript": "3.4.4"
   },
   "scripts": {
